NEW FEATURES

- plot() supports individual item information trace lines on the same graph (dichotomous items only) with
  the option type = 'infotrace'

- createItem() function available for defining item types that can be passed to estimation functions.
  This can be used to model items not available in the package (or anywhere for that matter) with the
  EM or MHRM. Derivatives are computed numerically by default using the numDeriv package for defining
  item types on the fly

- Mstep in EM moved to quasi-Newton instead of my home grown MV Newton-Raphson approach. Gives 
  more stability during estimation when the Hessian is ill-conditioned, and will provide an easier 
  front-end for defining user rolled IRT models

BUG FIXES

- small bias fix in hessian and gradients in mirt() implementation causing the liklihood to not always be 
  increasing near maximum

- fix input to itemplot() when object is a list of model objects


Changes in mirt 0.6.0

NEW FEATURES

- S-X2 statistic computed automatically for unidimensional models via itemfit()

- EAP for sum-scores added to fscores() with method = 'EAPsum'. Works with full.scores option 
  as well

- improve speed of estimation in multipleGroup() when latent means/variances are estimated

- multipleGroup(invariance = '') can include item names to specify which items are to
  be considered invariant accross groups. Useful for anchoring and DIF testing

- type = 'trace' option added to plot() to display all item trace lines on a single 
  graph (dichotomous items only)

- default estimation method in multipleGroup() switched to 'EM'

- boot.mirt() function added for computing bootstrapped standard errors with via the boot 
  package (which supports parallel computing as well), as well as a new option SE.type = ''
  for choosing between Bock and Lieberman or MHRM type information matrix computations 

- indexing items in itemplot, itemfit, and extract.item can be called using either a number or the 
  original item name